EmulateTouchFromMouseEvent sets phase for wheel events when latching on.

In https://chromium-review.googlesource.com/619832 DispatchMouseEvent
from protocol/input_handler.cc adds phase info to wheel events when
wheel scroll latching is enabled. This cl adds phase info to wheel
events that are forwarded from EmulateTouchFromMouseEvent.

To test this I changed emulateTouchFromMouseEvent.js to cover mousewheel
events as well; Without the changes from this cl the modified test fails
while handling the forwarded wheel event.

Bug: 776888, 526463
Test: inspector-protocol/input/emulateTouchFromMouseEvent.js
Change-Id: I6f86e75b841ba2fb34dfa4322488945e49268960
Reviewed-on: https://chromium-review.googlesource.com/733608
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511173}
Former-commit-id: 7f7a3170a7a73eb186e54edd8bd3edd22416c2ac